# blog3

./: .env  .gitignore  Cargo.toml  build.rs  config.toml  example.sqlite3  generate.sql
frontend/: edit.html.tera  index.css  index.html.tera  macros.html.tera  post.css  post.html.tera  rollup.config.js
frontend/src/: index.css  index.html.tera  index.tsx  page.html.tera  page.tsx  post.html.tera  post.tsx
frontend/src/bindings/: BlogPost.ts  Post.ts  Publish.ts  Recent.ts  index.ts
src/: main.rs
