[package]
name = "blog3"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
axum = { version = "0.8.6", features = ["http2"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.149"
slug = "0.1.6"
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio", "sqlite", "uuid"] }
tera = "1.20.0"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
ts-rs = { version = "11.1.0", features = ["chrono-impl", "uuid-impl"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }

[build-dependencies]
glob = "0.3.3"
